Bug 1607426 - Add a mutex to protect nsPACMan::mLoader r=mayhemer

Differential Revision: https://phabricator.services.mozilla.com/D73286