netwerk/base/nsPACMan.h
@@ -7,6 +7,7 @@
 #ifndef nsPACMan_h__
 #define nsPACMan_h__
 
+#include "mozilla/DataMutex.h"
 #include "nsIStreamLoader.h"
 #include "nsIInterfaceRequestor.h"
 #include "nsIChannelEventSink.h"
@@ -136,7 +137,10 @@ public:
   /**
    * Returns true if we are currently loading the PAC file.
    */
-  bool IsLoading() { return mLoader != nullptr; }
+  bool IsLoading() {
+    auto loader = mLoader.Lock();
+    return loader.ref() != nullptr;
+  }
 
   /**
    * Returns true if the given URI matches the URI of our PAC file or the
@@ -231,7 +235,7 @@ private:
   nsCString                    mPACURIRedirectSpec;
   nsCString                    mNormalPACURISpec;
 
-  nsCOMPtr<nsIStreamLoader>    mLoader;
+  DataMutex<nsCOMPtr<nsIStreamLoader>> mLoader;
   bool                         mLoadPending;
   Atomic<bool, Relaxed>        mShutdown;
   TimeStamp                    mScheduledReload;
